initial port to 7.1.0

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-xactmetal = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-xactmetal = "6"
 
 LAYERDEPENDS_meta-xactmetal = "core"
-LAYERSERIES_COMPAT_meta-xactmetal = "dunfell"
+LAYERSERIES_COMPAT_meta-xactmetal = "scarthgap"
