--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,7 +7,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 
 BBFILE_COLLECTIONS += "meta-xactmetal"
 BBFILE_PATTERN_meta-xactmetal = "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-xactmetal = "6"
+BBFILE_PRIORITY_meta-xactmetal = "91"
 
-LAYERDEPENDS_meta-xactmetal = "core"
+LAYERDEPENDS_meta-xactmetal = "core sota virtualization-layer meta-toradex-torizon"
 LAYERSERIES_COMPAT_meta-xactmetal = "scarthgap"
